--- a/Modelo.Application/appsettings.json
+++ b/Modelo.Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:adriano.database.windows.net,1433;Initial Catalog=Sql1;Persist Security Info=False;User ID=adriano;Password=Minhasenha1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=sqlpostgree.postgres.database.azure.com;Database=;Port=5432;User Id=adriano;Password=Minhasenha1;"
   },
   "Logging": {
     "LogLevel": {
